fix: implement strict domain validation and secure data return