@@ -2,9 +2,9 @@ package ua.knd11.service.impl;
 
 import ua.knd11.model.Grade;
 import ua.knd11.service.JournalService;
+
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class JournalServiceImpl implements JournalService {
 
@@ -12,13 +12,7 @@ public class JournalServiceImpl implements JournalService {
 
     @Override
     public void assignGrade(int studentId, String subject, int score) {
-
-        if (score < 0 || score > 100) {
-            throw new IllegalArgumentException("Grade must be between 0 and 100");
-        }
-
         Grade newGrade = new Grade(studentId, subject, score);
-
         grades.add(newGrade);
         System.out.println("Оцінку успішно додано до журналу!");
     }
@@ -28,6 +22,8 @@ public class JournalServiceImpl implements JournalService {
 
         return grades.stream()
                 .filter(grade -> grade.getStudentId() == studentId)
-                .collect(Collectors.toList());
+
+                .map(original -> new Grade(original.getStudentId(), original.getSubject(), original.getScore()))
+                .toList();
     }
 }
